--- a/LaTex/emuser.tex
+++ b/LaTex/emuser.tex
@@ -50,7 +50,13 @@ ItalicFont = Fontin-Italic.otf
 
 
 %Section: Work Experience at the top
-
+\section{Work Experience}
+\begin{tabular}{r|p{11cm}}
+ \emph{Current} & \textbf{Cargo Specialist} at \textsc{United States Army Reserve} \\\textsc{Dec 2015}& \fontsize{10}{12}\selectfont{Arden Hills, MN}\\&\footnotesize{- Inspect, count and document cargo utilizing both manual and automated data processing systems \newline - Operate and maintain all types and sizes of winches, cranes and forklifts
+  }\\\multicolumn{2}{c}{} \\
+   \textsc{Jul 2015} & \textbf{} \\\textsc{}& \fontsize{10}{12}\selectfont {} \\&\footnotesize{}\\\multicolumn{2}{c}{} \\
+   \textsc{Summer 2013} & \textbf{Manufacturer Intern} at \textsc{Samsung}\\\textsc{} & \fontsize{10}{12}\selectfont{Gwangju, South Korea} \\&\footnotesize{- Assist in creating a maintenance schedule for new manufacturing equipment \newline- Learn the efficient manufacturing process of refrigerators and apply this method on the assembly line}
+   \end{tabular}
 
 %Section: Education
 \section{Education}
